// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`../Nav <Nav /> (dark mode) should render 1`] = `
<nav
  aria-label="{'en':'Navigation buttons','es':'Botones de navegación'}"
>
  <ul
    className="List"
    disablePadding={true}
  >
    <li
      className="ListItem lib-react-app_drawer-nav-li({\\"color\\":\\"theme.palette.primary.main\\",\\"borderRight\\":\\"4px solid transparent\\"})"
    >
      <div
        className="ListItemIcon lib-react-app_drawer-nav-liIcon({\\"color\\":\\"inherit\\",\\"fontSize\\":\\"theme.spacing(2)\\",\\"minWidth\\":\\"theme.spacing(5)\\",\\"marginRight\\":\\"theme.spacing(2)\\"})"
      >
        <span>
          {'en':'en Foo Icon','es':'es Foo Icon'}
        </span>
      </div>
      <div
        className="ListItemText lib-react-app_drawer-nav-liText({\\"display\\":\\"block\\",\\"& > span\\":{\\"display\\":\\"block\\"},\\"& > span > a\\":{\\"color\\":\\"inherit\\",\\"display\\":\\"block\\"}})"
      >
        <a
          className="Link"
          onClick="props.onClick()"
          to={
            Object {
              "pathname": "/foo",
            }
          }
        >
          {'en':'English Foo','es':'Spanish Foo'}
        </a>
      </div>
    </li>
    <li
      className="ListItem lib-react-app_drawer-nav-li({\\"color\\":\\"theme.palette.primary.main\\",\\"borderRight\\":\\"4px solid transparent\\"}) lib-react-app_drawer-nav-activeLi({\\"color\\":\\"#33ccd7\\",\\"backgroundColor\\":\\"#272727\\",\\"borderRight\\":\\"4px solid currentColor\\"})"
    >
      <div
        className="ListItemIcon lib-react-app_drawer-nav-liIcon({\\"color\\":\\"inherit\\",\\"fontSize\\":\\"theme.spacing(2)\\",\\"minWidth\\":\\"theme.spacing(5)\\",\\"marginRight\\":\\"theme.spacing(2)\\"})"
      >
        <span>
          {'en':'en Bar Icon','es':'es Bar Icon'}
        </span>
      </div>
      <div
        className="ListItemText lib-react-app_drawer-nav-liText({\\"display\\":\\"block\\",\\"& > span\\":{\\"display\\":\\"block\\"},\\"& > span > a\\":{\\"color\\":\\"inherit\\",\\"display\\":\\"block\\"}})"
      >
        <a
          aria-label="{'en':'Current page','es':'Página actual'}"
          className="Link"
          onClick="props.onClick()"
          to={
            Object {
              "pathname": "/bar",
            }
          }
        >
          {'en':'English Bar','es':'Spanish Bar'}
        </a>
      </div>
    </li>
    <li
      className="ListItem lib-react-app_drawer-nav-li({\\"color\\":\\"theme.palette.primary.main\\",\\"borderRight\\":\\"4px solid transparent\\"})"
    >
      <div
        className="ListItemIcon lib-react-app_drawer-nav-liIcon({\\"color\\":\\"inherit\\",\\"fontSize\\":\\"theme.spacing(2)\\",\\"minWidth\\":\\"theme.spacing(5)\\",\\"marginRight\\":\\"theme.spacing(2)\\"})"
      >
        <span>
          {'en':'en Baz Icon','es':'es Baz Icon'}
        </span>
      </div>
      <div
        className="ListItemText lib-react-app_drawer-nav-liText({\\"display\\":\\"block\\",\\"& > span\\":{\\"display\\":\\"block\\"},\\"& > span > a\\":{\\"color\\":\\"inherit\\",\\"display\\":\\"block\\"}})"
      >
        <a
          className="Link"
          onClick="props.onClick()"
          to={
            Object {
              "pathname": "/baz",
            }
          }
        >
          {'en':'English Baz','es':'Spanish Baz'}
        </a>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`../Nav <Nav /> (dark mode) should set the window title 1`] = `"{'en':'English Bar','es':'Spanish Bar'} - Window Title"`;

exports[`../Nav <Nav /> (light mode) should render 1`] = `
<nav
  aria-label="{'en':'Navigation buttons','es':'Botones de navegación'}"
>
  <ul
    className="List"
    disablePadding={true}
  >
    <li
      className="ListItem lib-react-app_drawer-nav-li({\\"color\\":\\"theme.palette.primary.main\\",\\"borderRight\\":\\"4px solid transparent\\"})"
    >
      <div
        className="ListItemIcon lib-react-app_drawer-nav-liIcon({\\"color\\":\\"inherit\\",\\"fontSize\\":\\"theme.spacing(2)\\",\\"minWidth\\":\\"theme.spacing(5)\\",\\"marginRight\\":\\"theme.spacing(2)\\"})"
      >
        <span>
          {'en':'en Foo Icon','es':'es Foo Icon'}
        </span>
      </div>
      <div
        className="ListItemText lib-react-app_drawer-nav-liText({\\"display\\":\\"block\\",\\"& > span\\":{\\"display\\":\\"block\\"},\\"& > span > a\\":{\\"color\\":\\"inherit\\",\\"display\\":\\"block\\"}})"
      >
        <a
          className="Link"
          onClick="props.onClick()"
          to={
            Object {
              "pathname": "/foo",
            }
          }
        >
          {'en':'English Foo','es':'Spanish Foo'}
        </a>
      </div>
    </li>
    <li
      className="ListItem lib-react-app_drawer-nav-li({\\"color\\":\\"theme.palette.primary.main\\",\\"borderRight\\":\\"4px solid transparent\\"}) lib-react-app_drawer-nav-activeLi({\\"color\\":\\"#017982\\",\\"backgroundColor\\":\\"#f1f1f1\\",\\"borderRight\\":\\"4px solid currentColor\\"})"
    >
      <div
        className="ListItemIcon lib-react-app_drawer-nav-liIcon({\\"color\\":\\"inherit\\",\\"fontSize\\":\\"theme.spacing(2)\\",\\"minWidth\\":\\"theme.spacing(5)\\",\\"marginRight\\":\\"theme.spacing(2)\\"})"
      >
        <span>
          {'en':'en Bar Icon','es':'es Bar Icon'}
        </span>
      </div>
      <div
        className="ListItemText lib-react-app_drawer-nav-liText({\\"display\\":\\"block\\",\\"& > span\\":{\\"display\\":\\"block\\"},\\"& > span > a\\":{\\"color\\":\\"inherit\\",\\"display\\":\\"block\\"}})"
      >
        <a
          aria-label="{'en':'Current page','es':'Página actual'}"
          className="Link"
          onClick="props.onClick()"
          to={
            Object {
              "pathname": "/bar",
            }
          }
        >
          {'en':'English Bar','es':'Spanish Bar'}
        </a>
      </div>
    </li>
    <li
      className="ListItem lib-react-app_drawer-nav-li({\\"color\\":\\"theme.palette.primary.main\\",\\"borderRight\\":\\"4px solid transparent\\"})"
    >
      <div
        className="ListItemIcon lib-react-app_drawer-nav-liIcon({\\"color\\":\\"inherit\\",\\"fontSize\\":\\"theme.spacing(2)\\",\\"minWidth\\":\\"theme.spacing(5)\\",\\"marginRight\\":\\"theme.spacing(2)\\"})"
      >
        <span>
          {'en':'en Baz Icon','es':'es Baz Icon'}
        </span>
      </div>
      <div
        className="ListItemText lib-react-app_drawer-nav-liText({\\"display\\":\\"block\\",\\"& > span\\":{\\"display\\":\\"block\\"},\\"& > span > a\\":{\\"color\\":\\"inherit\\",\\"display\\":\\"block\\"}})"
      >
        <a
          className="Link"
          onClick="props.onClick()"
          to={
            Object {
              "pathname": "/baz",
            }
          }
        >
          {'en':'English Baz','es':'Spanish Baz'}
        </a>
      </div>
    </li>
  </ul>
</nav>
`;

exports[`../Nav <Nav /> (light mode) should set the window title 1`] = `"{'en':'English Bar','es':'Spanish Bar'} - Window Title"`;

exports[`../Nav should use the right versions of its dependencies 1`] = `
Object {
  "@material-ui/core": "^4.5.0",
  "prop-types": "^15.7.2",
  "react": "^16.10.1",
}
`;
